[gd_scene load_steps=15 format=4 uid="uid://cfr7v288b4fg3"]

[ext_resource type="Texture2D" uid="uid://cj8sfbb87fepi" path="res://assets/Tileset_Templates/Tileset_2D Platformer.png" id="1_c16ls"]
[ext_resource type="Script" uid="uid://rc5x3jobg8bc" path="res://scripts/character_body_2d.gd" id="2_18nlu"]
[ext_resource type="Texture2D" uid="uid://c1g0gtsufltck" path="res://assets/placeholder-char.png" id="3_c1pb6"]
[ext_resource type="Script" uid="uid://bn74q8prfbn6r" path="res://scripts/biscuit.gd" id="4_6wevv"]
[ext_resource type="Texture2D" uid="uid://c2ccsl0fjy1y" path="res://icon.svg" id="5_e1cbu"]
[ext_resource type="Script" uid="uid://b5m2flqs2ju6b" path="res://scripts/enemy.gd" id="6_mngbo"]
[ext_resource type="Texture2D" uid="uid://cjyr5gfeurecl" path="res://assets/placeholder-enemy.png" id="7_4w45t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_001wa"]
texture = ExtResource("1_c16ls")
1:0/0 = 0
2:0/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
12:7/0 = 0
14:7/0 = 0
15:7/0 = 0
18:7/0 = 0
19:7/0 = 0
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
18:8/0 = 0
19:8/0 = 0
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
1:10/0 = 0
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
1:11/0 = 0
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
1:12/0 = 0
2:12/0 = 0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:12/0 = 0
4:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
1:13/0 = 0
2:13/0 = 0
2:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:13/0 = 0
3:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:13/0 = 0
4:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
14:2/next_alternative_id = 2
14:2/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_lpbtr"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_001wa")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfk4m"]
size = Vector2(12, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viylu"]

[sub_resource type="LabelSettings" id="LabelSettings_kh07m"]
font_size = 14

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq1ik"]
size = Vector2(12, 15)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_wfnts"]
distance = 2.0

[node name="Node2D" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-8, -2)
tile_map_data = PackedByteArray("AAALABYAAAADAAkAAAAMABYAAAADAAkAAAANABYAAAADAAkAAAAOABYAAAADAAkAAAAPABYAAAAEAAkAAAASABQAAAABAAkAAAAUABIAAAABAAkAAAAXABAAAAACAAkAAAAYABAAAAADAAkAAAAZABAAAAADAAkAAAAaABAAAAADAAkAAAAbABAAAAAEAAkAAAAdAA4AAAABAAgAAAAdAA0AAAABAAcAAAAdAAwAAAABAAcAAAAdAAsAAAABAAcAAAAdAAoAAAABAAYAAAAgAAgAAAADAAkAAAAhAAgAAAAEAAkAAAAKABYAAAACAAkAAAAfAAgAAAACAAkAAAAYAAAAAAADAAkAAAAXAAAAAAADAAkAAAAWAAAAAAACAAkAAAASAAAAAAABAAkAAAAOAAAAAAABAAkAAAALAP3/AAABAAgAAAALAPz/AAABAAcAAAALAPv/AAABAAcAAAALAPr/AAABAAYAAAANAPf/AAABAAkAAAAPAPT/AAABAAkAAAARAPH/AAABAAkAAAATAO7/AAABAAkAAAAVAOv/AAACAAkAAAAWAOv/AAADAAkAAAAXAOv/AAADAAkAAAAYAOv/AAADAAkAAAAZAOv/AAADAAkAAAAaAOv/AAAEAAkAAAAcAAYAAAABAAgAAAAcAAUAAAABAAcAAAAcAAQAAAABAAcAAAAcAAMAAAABAAcAAAAcAAIAAAABAAYAAAAZAAAAAAAEAAkAAABDAB0AAAAEAA0AAAD1/x0AAAACAA0AAAD2/x0AAAADAA0AAAD3/x0AAAADAA0AAAD4/x0AAAADAA0AAAD5/x0AAAADAA0AAAD6/x0AAAADAA0AAAD7/x0AAAADAA0AAAD8/x0AAAADAA0AAAD9/x0AAAADAA0AAAD+/x0AAAADAA0AAAD//x0AAAADAA0AAAAAAB0AAAADAA0AAAABAB0AAAADAA0AAAACAB0AAAADAA0AAAADAB0AAAADAA0AAAAEAB0AAAADAA0AAAAFAB0AAAADAA0AAAAGAB0AAAADAA0AAAAHAB0AAAADAA0AAAAIAB0AAAADAA0AAAAJAB0AAAADAA0AAAAKAB0AAAADAA0AAAALAB0AAAADAA0AAAAMAB0AAAADAA0AAAANAB0AAAADAA0AAAAOAB0AAAADAA0AAAAPAB0AAAADAA0AAAAQAB0AAAADAA0AAAARAB0AAAADAA0AAAASAB0AAAADAA0AAAATAB0AAAADAA0AAAAUAB0AAAADAA0AAAAVAB0AAAADAA0AAAAWAB0AAAADAA0AAAAXAB0AAAADAA0AAAAYAB0AAAADAA0AAAAZAB0AAAADAA0AAAAaAB0AAAADAA0AAAAbAB0AAAADAA0AAAAcAB0AAAADAA0AAAAdAB0AAAADAA0AAAAeAB0AAAADAA0AAAAfAB0AAAADAA0AAAAgAB0AAAADAA0AAAAhAB0AAAADAA0AAAAiAB0AAAADAA0AAAAjAB0AAAADAA0AAAAkAB0AAAADAA0AAAAlAB0AAAADAA0AAAAmAB0AAAADAA0AAAAnAB0AAAADAA0AAAAoAB0AAAADAA0AAAApAB0AAAADAA0AAAAqAB0AAAADAA0AAAArAB0AAAADAA0AAAAsAB0AAAADAA0AAAAtAB0AAAADAA0AAAAuAB0AAAADAA0AAAAvAB0AAAADAA0AAAAwAB0AAAADAA0AAAAxAB0AAAADAA0AAAAyAB0AAAADAA0AAAAzAB0AAAADAA0AAAA0AB0AAAADAA0AAAA1AB0AAAADAA0AAAA2AB0AAAADAA0AAAA3AB0AAAADAA0AAAA4AB0AAAADAA0AAAA5AB0AAAADAA0AAAA6AB0AAAADAA0AAAA7AB0AAAADAA0AAAA8AB0AAAADAA0AAAA9AB0AAAADAA0AAAA+AB0AAAADAA0AAAA/AB0AAAADAA0AAABAAB0AAAADAA0AAABBAB0AAAADAA0AAABCAB0AAAADAA0AAAA=")
tile_set = SubResource("TileSet_lpbtr")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(210, 335)
script = ExtResource("2_18nlu")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
drag_horizontal_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_c1pb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_nfk4m")

[node name="RespawnTimer" type="Timer" parent="Player"]
one_shot = true

[node name="Biscuit" type="Area2D" parent="."]
position = Vector2(378, -351)
script = ExtResource("4_6wevv")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Biscuit"]
position = Vector2(2.38419e-07, 3.57628e-07)
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("5_e1cbu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Biscuit"]
shape = SubResource("RectangleShape2D_viylu")

[node name="Label" type="Label" parent="Biscuit"]
offset_left = -22.0
offset_top = -36.0
offset_right = 24.0
offset_bottom = -16.0
text = "Biscuit"
label_settings = SubResource("LabelSettings_kh07m")

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(429, 246)
script = ExtResource("6_mngbo")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
texture = ExtResource("7_4w45t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hq1ik")

[node name="LedgeDetector" type="RayCast2D" parent="Enemy"]
target_position = Vector2(0, 23)

[node name="LeftSidePlayerDetector" type="RayCast2D" parent="Enemy"]
target_position = Vector2(-9, 0)

[node name="RightSidePlayerDetector" type="RayCast2D" parent="Enemy"]
target_position = Vector2(9, 0)

[node name="DeathDetector" type="RayCast2D" parent="Enemy"]
target_position = Vector2(0, -12)

[node name="KillZone" type="Area2D" parent="."]
position = Vector2(621, 462)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
shape = SubResource("WorldBoundaryShape2D_wfnts")

[connection signal="timeout" from="Player/RespawnTimer" to="Player" method="_on_respawn_timer_timeout"]
[connection signal="body_entered" from="Biscuit" to="Biscuit" method="_on_body_entered"]
[connection signal="tree_exiting" from="Biscuit" to="Player" method="_on_biscuit_tree_exiting"]
[connection signal="body_entered" from="KillZone" to="Player" method="_on_kill_zone_body_entered"]
